home and section creation :construction

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,1 +1,10 @@
-<p class="container">home works!</p>
+<div class="flex flex-col text-scheme-text">
+  <app-hero-section></app-hero-section>
+  <app-services-section></app-services-section>
+  <app-projects-accordion></app-projects-accordion>
+  <app-mission-section></app-mission-section>
+  <app-product-showcase></app-product-showcase>
+  <app-contact subtitle="Contactez nous si vous avez des questions, un besoin ou une suggestion."></app-contact>
+  <app-cta-section></app-cta-section>
+  <app-footer></app-footer>
+</div>
