--- a/src/app/features/auth/auth.component.html
+++ b/src/app/features/auth/auth.component.html
@@ -106,10 +106,10 @@
                 {{ signupSuccessMessage }}
               </p>
               <button type="button" data-slot="button"
-                class="inline-flex items-center justify-center gap-3 rounded-button border border-scheme-border px-6 py-3 text-scheme-text transition-all duration-200 ease-in-out"
+                class="inline-flex items-center justify-center gap-3 rounded-button border border-scheme-border px-6 py-3  transition-all duration-200 ease-in-out"
                 title="Inscrivez-vous avec Google" (click)="handleGoogleAuth('sign-up')">
-                <app-svg-icon name="google" class="size-6 text-scheme-text" [size]="1.5"></app-svg-icon>
-                Inscrivez-vous avec Google
+                <app-svg-icon name="network/google" [fill]="'keep'" [size]="1.7"></app-svg-icon>
+                <p class="text-scheme-text">Inscrivez-vous avec Google</p>
               </button>
             </div>
           </form>
@@ -178,10 +178,10 @@
                 {{ loginSuccessMessage }}
               </p>
               <button type="button" data-slot="button"
-                class="inline-flex items-center justify-center gap-3 rounded-button border border-scheme-border px-6 py-3 text-scheme-text transition-all duration-200 ease-in-out"
+                class="inline-flex items-center justify-center gap-3 rounded-button border border-scheme-border px-6 py-3 transition-all duration-200 ease-in-out"
                 title="Connectez-vous avec Google" (click)="handleGoogleAuth('log-in')">
-                <app-svg-icon name="google" class="size-6 text-scheme-text" [size]="1.5"></app-svg-icon>
-                Connectez-vous avec Google
+                <app-svg-icon name="network/google" [fill]="'keep'" [size]="1.7"></app-svg-icon>
+                <p class="text-scheme-text">Connectez-vous avec Google</p>
               </button>
             </div>
           </form>
