--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
             scrolled
               ? 'bg-transparent backdrop-blur-sm'
               : 'bg-scheme-background'
-          " aria-label="main-navigation">
+          " role="navigation" aria-label="main-navigation">
   <div
     class="glass-card-dark bg-scheme-background  flex items-center justify-between p-3 px-6 rounded-full max-w-7xl mx-auto transition-all duration-300"
     [ngClass]="{ 'shadow-lg': scrolled }">
