--- a/src/app/features/auth/auth.component.html
+++ b/src/app/features/auth/auth.component.html
@@ -54,11 +54,20 @@
             @for (field of signupFields; track field.key) {
             <div class="relative mb-6">
 
-              <input [type]="field.type" [id]="field.key" [name]="field.key" [(ngModel)]="signupForm[field.key]"
-                [required]="field.required" [minlength]="field.key === 'password' ? 8 : null"
-                [email]="field.type === 'email' ? '' : false" placeholder=" " class="peer block w-full rounded-form border border-scheme-border px-3 py-2 focus:border-scheme-accent
+              <input
+                [type]="(field.key === 'password' || field.key === 'verifPassword') && showPassword ? 'text' : field.type"
+                [id]="field.key" [name]="field.key" [(ngModel)]="signupForm[field.key]" [required]="field.required"
+                [minlength]="field.key === 'password' ? 8 : null" [email]="field.type === 'email' ? '' : false"
+                placeholder=" " class="peer block w-full rounded-form border border-scheme-border px-3 py-2 focus:border-scheme-accent
               focus:outline-none" #control="ngModel"
                 [class.border-red-500]="control.invalid && (control.touched || isSignupSubmitted)" />
+              @if (field.key === 'password' || field.key === 'verifPassword') {
+              <button type="button" (click)="showPassword = !showPassword"
+                class="absolute right-3 top-1/2 -translate-y-1/2 text-gray-500 hover:text-gray-700">
+                <app-svg-icon [name]="showPassword ? 'visibility_off' : 'visibility'" [fill]="'keep'"
+                  [size]="1"></app-svg-icon>
+              </button>
+              }
 
               <label [for]="field.key" class="absolute left-3 tosp-2 px-1 
              bg-white text-gray-600 text-sm font-medium
@@ -74,6 +83,7 @@
                 [class.text-red-500]="control.invalid && (control.touched || isSignupSubmitted)">
                 {{ field.label }}
                 <span *ngIf="!field.required">(facultatif)</span>
+
               </label>
               <p *ngIf="control.invalid && (control.touched || isSignupSubmitted)" class="mt-1 text-xs text-red-500">
                 @if (control.errors?.['required']) {
