--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -4,6 +4,9 @@
   <app-projects-accordion></app-projects-accordion>
   <app-mission-section></app-mission-section>
   <app-product-showcase></app-product-showcase>
-  <app-contact subtitle="Contactez nous si vous avez des questions, un besoin ou une suggestion."></app-contact>
+  <app-contact
+    subtitle="Contactez nous si vous avez des questions, un besoin ou une suggestion."
+    i18n-subtitle="home.contact.subtitle|Home contact prompt@@homeContactSubtitle"
+  ></app-contact>
   <app-cta-section></app-cta-section>
 </div>
