--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -13,7 +13,7 @@
       </a>
     </div>
 
-    <div class="hidden lg:flex items-center gap-6">
+    <div class="hidden lg:flex items-center gap-5">
       <ng-container *ngTemplateOutlet="navContent; context: { isMobile: false }">
       </ng-container>
     </div>
@@ -53,7 +53,7 @@
 
 <!-- SHARED NAV CONTENT -->
 <ng-template #navContent let-isMobile="isMobile">
-  <ul class="flex flex-col lg:flex-row items-center gap-3" [ngClass]="isMobile ? 'mt-2' : 'flex-row'">
+  <ul class="flex flex-col lg:flex-row items-center gap-5" [ngClass]="isMobile ? 'mt-2' : 'flex-row'">
     @for (item of navLinks; track $index) {
     <li>
       <a [routerLink]="item.href" routerLinkActive="font-medium" #rla="routerLinkActive"
@@ -111,12 +111,12 @@
     }
   </ul>
 
-  <div class="flex items-center justify-center gap-3" [ngClass]="isMobile ? 'mt-4' : ''">
+  <div class="flex items-center justify-center gap-5" [ngClass]="isMobile ? 'mt-4' : ''">
     <button type="button"
       class="bg-scheme-background rounded-button whitespace-nowrap transition-all duration-200 ease-in-out focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-scheme-border text-scheme-text px-5 py-2"
-      title="Demander un devis" i18n-title="navbar.cta.quote.title|Quote CTA tooltip@@navCtaQuoteTitle"
-      [routerLink]="'/devis'" (click)="isMobile && closeMobileMenu()">
-      <span i18n="navbar.cta.quote.label|Quote CTA label@@navCtaQuoteLabel">Devis</span>
+      title="Demander un devis" i18n-title="navbar.link.offer|Navbar primary link@@navLinkOffer:Offres"
+      [routerLink]="'/offer'" (click)="isMobile && closeMobileMenu()">
+      <span i18n="navbar.link.offer|Navbar primary link@@navLinkOffer:Offres">Offres</span>
     </button>
 
     <button type="button"
