--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,7 +16,7 @@
     @apply rounded-xl;
   } // par ex. un peu plus arrondi
   .rounded-button {
-    @apply rounded-full;
+    @apply rounded-lg;
   }
 
   /* Fonts : tu peux ajouter font-heading aux titres si tu veux le serif */
